reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell, cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93195384"
---
# <span data-ttu-id="551f7-103">Módulo Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="551f7-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="551f7-104">Descrição</span><span class="sxs-lookup"><span data-stu-id="551f7-104">Description</span></span>

<span data-ttu-id="551f7-105">Esta seção contém os tópicos de ajuda para os cmdlets instalados com o módulo Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="551f7-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="551f7-106">Este módulo contém cmdlets que gerenciam os recursos básicos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="551f7-107">Cmdlets do Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="551f7-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="551f7-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="551f7-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="551f7-109">Adiciona propriedades e métodos personalizados a uma instância de um objeto do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="551f7-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="551f7-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="551f7-111">Adiciona uma classe de estrutura de Microsoft .NET a uma sessão do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="551f7-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="551f7-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="551f7-113">Excluir o valor de uma variável.</span><span class="sxs-lookup"><span data-stu-id="551f7-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="551f7-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="551f7-115">Compara dois conjuntos de objetos.</span><span class="sxs-lookup"><span data-stu-id="551f7-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="551f7-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="551f7-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="551f7-117">Formata uma cadeia de caracteres para fazer a correspondência de exemplos.</span><span class="sxs-lookup"><span data-stu-id="551f7-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="551f7-118">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="551f7-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="551f7-119">Converte as propriedades de objeto, do formato de valores separados por vírgulas (CSV), em versões CSV dos objetos originais.</span><span class="sxs-lookup"><span data-stu-id="551f7-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="551f7-120">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="551f7-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="551f7-121">Converte uma cadeia de caracteres formatada em JSON em um objeto personalizado.</span><span class="sxs-lookup"><span data-stu-id="551f7-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="551f7-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="551f7-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="551f7-123">Converte uma cadeia de caracteres SDDL em um objeto personalizado.</span><span class="sxs-lookup"><span data-stu-id="551f7-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="551f7-124">ConvertFrom-String</span><span class="sxs-lookup"><span data-stu-id="551f7-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="551f7-125">Extrai e analisa as propriedades estruturadas do conteúdo da cadeia de caracteres.</span><span class="sxs-lookup"><span data-stu-id="551f7-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="551f7-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="551f7-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="551f7-127">Converte uma cadeia de caracteres que contém um ou mais pares de chave/valor em uma tabela de hash.</span><span class="sxs-lookup"><span data-stu-id="551f7-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="551f7-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="551f7-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="551f7-129">Converte objetos .NET em uma série de cadeias de caracteres CSV (valores separados por vírgula).</span><span class="sxs-lookup"><span data-stu-id="551f7-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="551f7-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="551f7-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="551f7-131">Converte objetos .NET em HTML que pode ser exibido em um navegador da Web.</span><span class="sxs-lookup"><span data-stu-id="551f7-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="551f7-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="551f7-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="551f7-133">Converte um objeto em uma cadeia de caracteres formatada em JSON.</span><span class="sxs-lookup"><span data-stu-id="551f7-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="551f7-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="551f7-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="551f7-135">Cria uma representação de um objeto baseada em XML.</span><span class="sxs-lookup"><span data-stu-id="551f7-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="551f7-136">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="551f7-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="551f7-137">Inicia uma sessão de depuração interativa com um runspace.</span><span class="sxs-lookup"><span data-stu-id="551f7-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="551f7-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="551f7-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="551f7-139">Desabilita os pontos de interrupção no console atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="551f7-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="551f7-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="551f7-141">Desabilita a depuração em um ou mais Runspaces e libera qualquer interrupção de depurador pendente.</span><span class="sxs-lookup"><span data-stu-id="551f7-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="551f7-142">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="551f7-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="551f7-143">Habilita os pontos de interrupção no console atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="551f7-144">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="551f7-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="551f7-145">Habilita a depuração em Runspaces, em que qualquer ponto de interrupção é preservado até que um depurador seja anexado.</span><span class="sxs-lookup"><span data-stu-id="551f7-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="551f7-146">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="551f7-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="551f7-147">Exporta as informações sobre aliases definidos atualmente para um arquivo.</span><span class="sxs-lookup"><span data-stu-id="551f7-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="551f7-148">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="551f7-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="551f7-149">Cria uma representação baseada em XML de um objeto ou objetos e armazena-a em um arquivo.</span><span class="sxs-lookup"><span data-stu-id="551f7-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="551f7-150">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="551f7-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="551f7-151">Converte objetos em uma série de cadeias de caracteres de valores separados por vírgulas (CSV) e salva as cadeias de caracteres em um arquivo.</span><span class="sxs-lookup"><span data-stu-id="551f7-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="551f7-152">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="551f7-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="551f7-153">Salva os dados de formatação da sessão atual em um arquivo de formatação.</span><span class="sxs-lookup"><span data-stu-id="551f7-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="551f7-154">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="551f7-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="551f7-155">Exporta comandos de outra sessão e salva-os em um módulo do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="551f7-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="551f7-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="551f7-157">Usa um modo de exibição personalizado para formatar a saída.</span><span class="sxs-lookup"><span data-stu-id="551f7-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="551f7-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="551f7-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="551f7-159">Exibe um arquivo ou outra entrada como hexadecimal.</span><span class="sxs-lookup"><span data-stu-id="551f7-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="551f7-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="551f7-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="551f7-161">Formata a saída como uma lista de propriedades na qual cada propriedade aparece em uma nova linha.</span><span class="sxs-lookup"><span data-stu-id="551f7-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="551f7-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="551f7-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="551f7-163">Formata a saída como uma tabela.</span><span class="sxs-lookup"><span data-stu-id="551f7-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="551f7-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="551f7-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="551f7-165">Formata objetos como uma tabela ampla que exibe apenas uma propriedade de cada objeto.</span><span class="sxs-lookup"><span data-stu-id="551f7-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="551f7-166">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="551f7-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="551f7-167">Obtém os aliases para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="551f7-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="551f7-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="551f7-169">Obtém a cultura atual definida no sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="551f7-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="551f7-170">Obter Data</span><span class="sxs-lookup"><span data-stu-id="551f7-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="551f7-171">Obtém a data e hora atuais.</span><span class="sxs-lookup"><span data-stu-id="551f7-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="551f7-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="551f7-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="551f7-173">Obtém os eventos na fila de eventos.</span><span class="sxs-lookup"><span data-stu-id="551f7-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="551f7-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="551f7-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="551f7-175">Obtém os assinantes do evento na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="551f7-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="551f7-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="551f7-177">Calcula o valor de hash para um arquivo utilizando um algoritmo de hash especificado.</span><span class="sxs-lookup"><span data-stu-id="551f7-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="551f7-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="551f7-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="551f7-179">Obtém os dados de formatação na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="551f7-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="551f7-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="551f7-181">Obtém um objeto que representa o programa host atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="551f7-182">Get-Member</span><span class="sxs-lookup"><span data-stu-id="551f7-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="551f7-183">Obtém as propriedades e métodos de objetos.</span><span class="sxs-lookup"><span data-stu-id="551f7-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="551f7-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="551f7-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="551f7-185">Obtém os pontos de interrupção definidos na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="551f7-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="551f7-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="551f7-187">Exibe a pilha de chamadas atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="551f7-188">Get-Random</span><span class="sxs-lookup"><span data-stu-id="551f7-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="551f7-189">Obtém um número aleatório ou seleciona objetos aleatoriamente de uma coleção.</span><span class="sxs-lookup"><span data-stu-id="551f7-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="551f7-190">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="551f7-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="551f7-191">Obtém Runspaces ativos em um processo de host do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="551f7-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="551f7-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="551f7-193">Mostra opções de depuração do runspace.</span><span class="sxs-lookup"><span data-stu-id="551f7-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="551f7-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="551f7-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="551f7-195">Obtém os componentes do PowerShell que são instrumentados para rastreamento.</span><span class="sxs-lookup"><span data-stu-id="551f7-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="551f7-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="551f7-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="551f7-197">Obtém os dados de tipo estendido na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="551f7-198">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="551f7-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="551f7-199">Obtém as configurações de cultura da interface do usuário atuais no sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="551f7-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="551f7-200">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="551f7-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="551f7-201">Retorna itens únicos por meio de uma lista classificada.</span><span class="sxs-lookup"><span data-stu-id="551f7-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="551f7-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="551f7-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="551f7-203">Obtém as variáveis no console atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="551f7-204">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="551f7-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="551f7-205">Obtém os verbos aprovados do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="551f7-206">Group-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="551f7-207">Objetos de grupos que contêm o mesmo valor para as propriedades especificadas.</span><span class="sxs-lookup"><span data-stu-id="551f7-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="551f7-208">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="551f7-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="551f7-209">Importa uma lista de alias de um arquivo.</span><span class="sxs-lookup"><span data-stu-id="551f7-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="551f7-210">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="551f7-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="551f7-211">Importa um arquivo CLIXML e cria objetos correspondentes no PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="551f7-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="551f7-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="551f7-213">Cria objetos personalizados do tipo tabela a partir dos itens em um arquivo CSV (valores separados por vírgula).</span><span class="sxs-lookup"><span data-stu-id="551f7-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="551f7-214">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="551f7-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="551f7-215">Importa dados específicos de idioma para scripts e funções com base na cultura de interface de usuário selecionada para o sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="551f7-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="551f7-216">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="551f7-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="551f7-217">Importa valores de um. Arquivo PSD1 sem invocar seu conteúdo</span><span class="sxs-lookup"><span data-stu-id="551f7-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="551f7-218">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="551f7-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="551f7-219">Importa comandos de outra sessão para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="551f7-220">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="551f7-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="551f7-221">Executa comandos ou expressões no computador local.</span><span class="sxs-lookup"><span data-stu-id="551f7-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="551f7-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="551f7-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="551f7-223">Envia uma solicitação HTTP ou HTTPS para um serviço Web RESTful.</span><span class="sxs-lookup"><span data-stu-id="551f7-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="551f7-224">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="551f7-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="551f7-225">Obtém o conteúdo de uma página da web na Internet.</span><span class="sxs-lookup"><span data-stu-id="551f7-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="551f7-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="551f7-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="551f7-227">Mede o tempo de execução de cmdlets e blocos de script.</span><span class="sxs-lookup"><span data-stu-id="551f7-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="551f7-228">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="551f7-229">Calcula as propriedades numéricas de objetos e os caracteres, palavras e linhas em objetos de cadeia de caracteres, como arquivos de texto.</span><span class="sxs-lookup"><span data-stu-id="551f7-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="551f7-230">New-Alias</span><span class="sxs-lookup"><span data-stu-id="551f7-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="551f7-231">Cria um novo alias.</span><span class="sxs-lookup"><span data-stu-id="551f7-231">Creates a new alias.</span></span>

### [<span data-ttu-id="551f7-232">New-Event</span><span class="sxs-lookup"><span data-stu-id="551f7-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="551f7-233">Cria um novo evento.</span><span class="sxs-lookup"><span data-stu-id="551f7-233">Creates a new event.</span></span>

### [<span data-ttu-id="551f7-234">Novo GUID</span><span class="sxs-lookup"><span data-stu-id="551f7-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="551f7-235">Cria um GUID.</span><span class="sxs-lookup"><span data-stu-id="551f7-235">Creates a GUID.</span></span>

### [<span data-ttu-id="551f7-236">New-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="551f7-237">Cria uma instância de um objeto Microsoft .NET Framework ou COM.</span><span class="sxs-lookup"><span data-stu-id="551f7-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="551f7-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="551f7-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="551f7-239">Cria um arquivo temporário.</span><span class="sxs-lookup"><span data-stu-id="551f7-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="551f7-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="551f7-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="551f7-241">Cria um objeto TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="551f7-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="551f7-242">New-Variable</span><span class="sxs-lookup"><span data-stu-id="551f7-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="551f7-243">Cria uma nova variável.</span><span class="sxs-lookup"><span data-stu-id="551f7-243">Creates a new variable.</span></span>

### [<span data-ttu-id="551f7-244">Out-File</span><span class="sxs-lookup"><span data-stu-id="551f7-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="551f7-245">Envia a saída para um arquivo.</span><span class="sxs-lookup"><span data-stu-id="551f7-245">Sends output to a file.</span></span>

### [<span data-ttu-id="551f7-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="551f7-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="551f7-247">Envia a saída para uma tabela interativa em uma janela separada.</span><span class="sxs-lookup"><span data-stu-id="551f7-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="551f7-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="551f7-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="551f7-249">Envia a saída para uma impressora.</span><span class="sxs-lookup"><span data-stu-id="551f7-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="551f7-250">Out-String</span><span class="sxs-lookup"><span data-stu-id="551f7-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="551f7-251">Gera objetos de entrada como cadeias de caracteres.</span><span class="sxs-lookup"><span data-stu-id="551f7-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="551f7-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="551f7-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="551f7-253">Lê uma linha de entrada do console.</span><span class="sxs-lookup"><span data-stu-id="551f7-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="551f7-254">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="551f7-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="551f7-255">Assina eventos que são gerados pelo mecanismo do PowerShell e pelo `New-Event` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="551f7-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="551f7-256">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="551f7-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="551f7-257">Assina os eventos que são gerados por um objeto do Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="551f7-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="551f7-258">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="551f7-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="551f7-259">Exclui eventos da fila de eventos.</span><span class="sxs-lookup"><span data-stu-id="551f7-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="551f7-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="551f7-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="551f7-261">Exclui os pontos de interrupção do console atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="551f7-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="551f7-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="551f7-263">Exclui tipos estendidos da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="551f7-264">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="551f7-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="551f7-265">Exclui uma variável e seu valor.</span><span class="sxs-lookup"><span data-stu-id="551f7-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="551f7-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="551f7-267">Seleciona objetos ou propriedades de objeto.</span><span class="sxs-lookup"><span data-stu-id="551f7-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="551f7-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="551f7-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="551f7-269">Localiza texto em arquivos e cadeias de caracteres.</span><span class="sxs-lookup"><span data-stu-id="551f7-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="551f7-270">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="551f7-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="551f7-271">Localiza texto em uma cadeia de caracteres ou documento XML.</span><span class="sxs-lookup"><span data-stu-id="551f7-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="551f7-272">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="551f7-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="551f7-273">Envia uma mensagem de email.</span><span class="sxs-lookup"><span data-stu-id="551f7-273">Sends an email message.</span></span>

### [<span data-ttu-id="551f7-274">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="551f7-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="551f7-275">Cria ou altera um alias para um cmdlet ou outro comando na sessão atual do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="551f7-276">Set-Date</span><span class="sxs-lookup"><span data-stu-id="551f7-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="551f7-277">Altera a hora do sistema no computador para uma hora que você especificar.</span><span class="sxs-lookup"><span data-stu-id="551f7-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="551f7-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="551f7-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="551f7-279">Define um ponto de interrupção em uma linha, um comando ou uma variável.</span><span class="sxs-lookup"><span data-stu-id="551f7-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="551f7-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="551f7-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="551f7-281">Configura, inicia e para um rastreamento de componentes do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="551f7-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="551f7-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="551f7-283">Define o valor de uma variável.</span><span class="sxs-lookup"><span data-stu-id="551f7-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="551f7-284">Show-Command</span><span class="sxs-lookup"><span data-stu-id="551f7-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="551f7-285">Exibe informações de comando do PowerShell em uma janela gráfica.</span><span class="sxs-lookup"><span data-stu-id="551f7-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="551f7-286">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="551f7-287">Classifica os objetos por valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="551f7-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="551f7-288">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="551f7-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="551f7-289">Suspende a atividade em um script ou sessão pelo período de tempo especificado.</span><span class="sxs-lookup"><span data-stu-id="551f7-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="551f7-290">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="551f7-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="551f7-291">Salva a saída do comando em um arquivo ou variável e a envia pelo pipeline.</span><span class="sxs-lookup"><span data-stu-id="551f7-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="551f7-292">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="551f7-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="551f7-293">Configura e inicia um rastreamento da expressão ou comando especificado.</span><span class="sxs-lookup"><span data-stu-id="551f7-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="551f7-294">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="551f7-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="551f7-295">Desbloqueia os arquivos que foram baixados da Internet.</span><span class="sxs-lookup"><span data-stu-id="551f7-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="551f7-296">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="551f7-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="551f7-297">Cancela uma assinatura para um evento.</span><span class="sxs-lookup"><span data-stu-id="551f7-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="551f7-298">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="551f7-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="551f7-299">Atualiza os dados de formatação na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="551f7-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="551f7-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="551f7-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="551f7-301">Adiciona e remove itens de um valor de propriedade que contém uma coleção de objetos.</span><span class="sxs-lookup"><span data-stu-id="551f7-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="551f7-302">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="551f7-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="551f7-303">Atualiza os dados de tipo estendido na sessão.</span><span class="sxs-lookup"><span data-stu-id="551f7-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="551f7-304">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="551f7-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="551f7-305">Interrompe um script no depurador antes de executar a próxima instrução no script.</span><span class="sxs-lookup"><span data-stu-id="551f7-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="551f7-306">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="551f7-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="551f7-307">Aguarda até que um determinado evento seja gerado antes de continuar a executar.</span><span class="sxs-lookup"><span data-stu-id="551f7-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="551f7-308">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="551f7-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="551f7-309">Grava uma mensagem de depuração para o console.</span><span class="sxs-lookup"><span data-stu-id="551f7-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="551f7-310">Erro de gravação</span><span class="sxs-lookup"><span data-stu-id="551f7-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="551f7-311">Grava um objeto no fluxo de erros.</span><span class="sxs-lookup"><span data-stu-id="551f7-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="551f7-312">Write-Host</span><span class="sxs-lookup"><span data-stu-id="551f7-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="551f7-313">Grava a saída personalizada em um host.</span><span class="sxs-lookup"><span data-stu-id="551f7-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="551f7-314">Write-Information</span><span class="sxs-lookup"><span data-stu-id="551f7-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="551f7-315">Especifica como o PowerShell lida com dados de fluxo de informações para um comando.</span><span class="sxs-lookup"><span data-stu-id="551f7-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="551f7-316">Write-Output</span><span class="sxs-lookup"><span data-stu-id="551f7-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="551f7-317">Envia os objetos especificados para o próximo comando no pipeline.</span><span class="sxs-lookup"><span data-stu-id="551f7-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="551f7-318">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="551f7-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="551f7-319">Exibe uma barra de progresso dentro de uma janela de comando do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="551f7-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="551f7-320">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="551f7-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="551f7-321">Grava o texto para o fluxo de mensagem detalhada.</span><span class="sxs-lookup"><span data-stu-id="551f7-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="551f7-322">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="551f7-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="551f7-323">Grava uma mensagem de aviso.</span><span class="sxs-lookup"><span data-stu-id="551f7-323">Writes a warning message.</span></span>
