reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell, cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 10/07/2020
ms.locfileid: "93195435"
---
# <span data-ttu-id="f0706-103">Módulo Microsoft.PowerShell.Utility</span><span class="sxs-lookup"><span data-stu-id="f0706-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="f0706-104">Descrição</span><span class="sxs-lookup"><span data-stu-id="f0706-104">Description</span></span>

<span data-ttu-id="f0706-105">Esta seção contém os tópicos de ajuda para os cmdlets instalados com o módulo Microsoft. PowerShell. Utility.</span><span class="sxs-lookup"><span data-stu-id="f0706-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="f0706-106">Este módulo contém cmdlets que gerenciam os recursos básicos do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="f0706-107">Cmdlets do Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="f0706-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="f0706-108">Add-Member</span><span class="sxs-lookup"><span data-stu-id="f0706-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="f0706-109">Adiciona propriedades e métodos personalizados a uma instância de um objeto do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="f0706-110">Add-Type</span><span class="sxs-lookup"><span data-stu-id="f0706-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="f0706-111">Adiciona uma classe de núcleo Microsoft .NET a uma sessão do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="f0706-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="f0706-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="f0706-113">Excluir o valor de uma variável.</span><span class="sxs-lookup"><span data-stu-id="f0706-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="f0706-114">Compare-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="f0706-115">Compara dois conjuntos de objetos.</span><span class="sxs-lookup"><span data-stu-id="f0706-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="f0706-116">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="f0706-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="f0706-117">Converte as propriedades de objeto, do formato de valores separados por vírgulas (CSV), em versões CSV dos objetos originais.</span><span class="sxs-lookup"><span data-stu-id="f0706-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="f0706-118">ConvertFrom-Json</span><span class="sxs-lookup"><span data-stu-id="f0706-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="f0706-119">Converte uma cadeia de caracteres formatada em JSON em um objeto personalizado ou uma tabela de hash.</span><span class="sxs-lookup"><span data-stu-id="f0706-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="f0706-120">ConvertFrom-Markdown</span><span class="sxs-lookup"><span data-stu-id="f0706-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="f0706-121">Converta o conteúdo de uma cadeia de caracteres ou um arquivo em um objeto **MarkdownInfo** .</span><span class="sxs-lookup"><span data-stu-id="f0706-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="f0706-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="f0706-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="f0706-123">Converte uma cadeia de caracteres SDDL em um objeto personalizado.</span><span class="sxs-lookup"><span data-stu-id="f0706-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="f0706-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="f0706-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="f0706-125">Converte uma cadeia de caracteres que contém um ou mais pares de chave/valor em uma tabela de hash.</span><span class="sxs-lookup"><span data-stu-id="f0706-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="f0706-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="f0706-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="f0706-127">Converte objetos .NET em uma série de cadeias de caracteres CSV (valores separados por caractere).</span><span class="sxs-lookup"><span data-stu-id="f0706-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="f0706-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="f0706-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="f0706-129">Converte objetos .NET em HTML que pode ser exibido em um navegador da Web.</span><span class="sxs-lookup"><span data-stu-id="f0706-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="f0706-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="f0706-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="f0706-131">Converte um objeto em uma cadeia de caracteres formatada em JSON.</span><span class="sxs-lookup"><span data-stu-id="f0706-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="f0706-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="f0706-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="f0706-133">Cria uma representação de um objeto baseada em XML.</span><span class="sxs-lookup"><span data-stu-id="f0706-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="f0706-134">Debug-Runspace</span><span class="sxs-lookup"><span data-stu-id="f0706-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="f0706-135">Inicia uma sessão de depuração interativa com um runspace.</span><span class="sxs-lookup"><span data-stu-id="f0706-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="f0706-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f0706-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="f0706-137">Desabilita os pontos de interrupção no console atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="f0706-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f0706-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="f0706-139">Desabilita a depuração em um ou mais Runspaces e libera qualquer interrupção de depurador pendente.</span><span class="sxs-lookup"><span data-stu-id="f0706-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="f0706-140">Enable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f0706-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="f0706-141">Habilita os pontos de interrupção no console atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="f0706-142">Enable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f0706-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="f0706-143">Habilita a depuração em Runspaces, em que qualquer ponto de interrupção é preservado até que um depurador seja anexado.</span><span class="sxs-lookup"><span data-stu-id="f0706-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="f0706-144">Export-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="f0706-145">Exporta as informações sobre aliases definidos atualmente para um arquivo.</span><span class="sxs-lookup"><span data-stu-id="f0706-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="f0706-146">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="f0706-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="f0706-147">Cria uma representação baseada em XML de um objeto ou objetos e armazena-a em um arquivo.</span><span class="sxs-lookup"><span data-stu-id="f0706-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="f0706-148">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="f0706-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="f0706-149">Converte objetos em uma série de cadeias de caracteres de valores separados por vírgulas (CSV) e salva as cadeias de caracteres em um arquivo.</span><span class="sxs-lookup"><span data-stu-id="f0706-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="f0706-150">Export-FormatData</span><span class="sxs-lookup"><span data-stu-id="f0706-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="f0706-151">Salva os dados de formatação da sessão atual em um arquivo de formatação.</span><span class="sxs-lookup"><span data-stu-id="f0706-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="f0706-152">Export-PSSession</span><span class="sxs-lookup"><span data-stu-id="f0706-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="f0706-153">Exporta comandos de outra sessão e salva-os em um módulo do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="f0706-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="f0706-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="f0706-155">Usa um modo de exibição personalizado para formatar a saída.</span><span class="sxs-lookup"><span data-stu-id="f0706-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="f0706-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="f0706-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="f0706-157">Exibe um arquivo ou outra entrada como hexadecimal.</span><span class="sxs-lookup"><span data-stu-id="f0706-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="f0706-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="f0706-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="f0706-159">Formata a saída como uma lista de propriedades na qual cada propriedade aparece em uma nova linha.</span><span class="sxs-lookup"><span data-stu-id="f0706-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="f0706-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="f0706-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="f0706-161">Formata a saída como uma tabela.</span><span class="sxs-lookup"><span data-stu-id="f0706-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="f0706-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="f0706-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="f0706-163">Formata objetos como uma tabela ampla que exibe apenas uma propriedade de cada objeto.</span><span class="sxs-lookup"><span data-stu-id="f0706-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="f0706-164">Get-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="f0706-165">Obtém os aliases para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="f0706-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="f0706-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="f0706-167">Obtém a cultura atual definida no sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="f0706-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="f0706-168">Obter Data</span><span class="sxs-lookup"><span data-stu-id="f0706-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="f0706-169">Obtém a data e hora atuais.</span><span class="sxs-lookup"><span data-stu-id="f0706-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="f0706-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="f0706-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="f0706-171">Obtém e exibe as mensagens de erro mais recentes da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="f0706-172">Get-Event</span><span class="sxs-lookup"><span data-stu-id="f0706-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="f0706-173">Obtém os eventos na fila de eventos.</span><span class="sxs-lookup"><span data-stu-id="f0706-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="f0706-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="f0706-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="f0706-175">Obtém os assinantes do evento na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="f0706-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="f0706-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="f0706-177">Calcula o valor de hash para um arquivo utilizando um algoritmo de hash especificado.</span><span class="sxs-lookup"><span data-stu-id="f0706-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="f0706-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="f0706-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="f0706-179">Obtém os dados de formatação na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="f0706-180">Get-Host</span><span class="sxs-lookup"><span data-stu-id="f0706-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="f0706-181">Obtém um objeto que representa o programa host atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="f0706-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="f0706-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="f0706-183">Retorna as cores e os estilos atuais usados para renderizar o conteúdo de redução no console.</span><span class="sxs-lookup"><span data-stu-id="f0706-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="f0706-184">Get-Member</span><span class="sxs-lookup"><span data-stu-id="f0706-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="f0706-185">Obtém as propriedades e métodos de objetos.</span><span class="sxs-lookup"><span data-stu-id="f0706-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="f0706-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f0706-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="f0706-187">Obtém os pontos de interrupção definidos na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="f0706-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="f0706-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="f0706-189">Exibe a pilha de chamadas atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="f0706-190">Get-Random</span><span class="sxs-lookup"><span data-stu-id="f0706-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="f0706-191">Obtém um número aleatório ou seleciona objetos aleatoriamente de uma coleção.</span><span class="sxs-lookup"><span data-stu-id="f0706-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="f0706-192">Get-Runspace</span><span class="sxs-lookup"><span data-stu-id="f0706-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="f0706-193">Obtém Runspaces ativos em um processo de host do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="f0706-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="f0706-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="f0706-195">Mostra opções de depuração do runspace.</span><span class="sxs-lookup"><span data-stu-id="f0706-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="f0706-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="f0706-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="f0706-197">Obtém os componentes do PowerShell que são instrumentados para rastreamento.</span><span class="sxs-lookup"><span data-stu-id="f0706-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="f0706-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="f0706-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="f0706-199">Obtém os dados de tipo estendido na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="f0706-200">Get-UICulture</span><span class="sxs-lookup"><span data-stu-id="f0706-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="f0706-201">Obtém as configurações de cultura da interface do usuário atuais no sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="f0706-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="f0706-202">Get-Unique</span><span class="sxs-lookup"><span data-stu-id="f0706-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="f0706-203">Retorna itens únicos por meio de uma lista classificada.</span><span class="sxs-lookup"><span data-stu-id="f0706-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="f0706-204">Get-Uptime</span><span class="sxs-lookup"><span data-stu-id="f0706-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="f0706-205">Obter o **período** desde a última inicialização.</span><span class="sxs-lookup"><span data-stu-id="f0706-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="f0706-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="f0706-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="f0706-207">Obtém as variáveis no console atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="f0706-208">Get-Verb</span><span class="sxs-lookup"><span data-stu-id="f0706-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="f0706-209">Obtém os verbos aprovados do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="f0706-210">Group-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="f0706-211">Objetos de grupos que contêm o mesmo valor para as propriedades especificadas.</span><span class="sxs-lookup"><span data-stu-id="f0706-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="f0706-212">Import-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="f0706-213">Importa uma lista de alias de um arquivo.</span><span class="sxs-lookup"><span data-stu-id="f0706-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="f0706-214">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="f0706-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="f0706-215">Importa um arquivo CLIXML e cria objetos correspondentes no PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="f0706-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="f0706-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="f0706-217">Cria objetos personalizados do tipo tabela a partir dos itens em um arquivo CSV (valores separados por vírgula).</span><span class="sxs-lookup"><span data-stu-id="f0706-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="f0706-218">Import-LocalizedData</span><span class="sxs-lookup"><span data-stu-id="f0706-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="f0706-219">Importa dados específicos de idioma para scripts e funções com base na cultura de interface de usuário selecionada para o sistema operacional.</span><span class="sxs-lookup"><span data-stu-id="f0706-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="f0706-220">Import-PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="f0706-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="f0706-221">Importa valores de um `.PSD1` arquivo sem invocar seu conteúdo.</span><span class="sxs-lookup"><span data-stu-id="f0706-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="f0706-222">Import-PSSession</span><span class="sxs-lookup"><span data-stu-id="f0706-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="f0706-223">Importa comandos de outra sessão para a sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="f0706-224">Invoke-Expression</span><span class="sxs-lookup"><span data-stu-id="f0706-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="f0706-225">Executa comandos ou expressões no computador local.</span><span class="sxs-lookup"><span data-stu-id="f0706-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="f0706-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="f0706-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="f0706-227">Envia uma solicitação HTTP ou HTTPS para um serviço Web RESTful.</span><span class="sxs-lookup"><span data-stu-id="f0706-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="f0706-228">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="f0706-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="f0706-229">Obtém o conteúdo de uma página da Web na Internet.</span><span class="sxs-lookup"><span data-stu-id="f0706-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="f0706-230">Join-String</span><span class="sxs-lookup"><span data-stu-id="f0706-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="f0706-231">Combina objetos do pipeline em uma única cadeia de caracteres.</span><span class="sxs-lookup"><span data-stu-id="f0706-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="f0706-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="f0706-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="f0706-233">Mede o tempo de execução de cmdlets e blocos de script.</span><span class="sxs-lookup"><span data-stu-id="f0706-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="f0706-234">Measure-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="f0706-235">Calcula as propriedades numéricas de objetos e os caracteres, palavras e linhas em objetos de cadeia de caracteres, como arquivos de texto.</span><span class="sxs-lookup"><span data-stu-id="f0706-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="f0706-236">New-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="f0706-237">Cria um novo alias.</span><span class="sxs-lookup"><span data-stu-id="f0706-237">Creates a new alias.</span></span>

### [<span data-ttu-id="f0706-238">New-Event</span><span class="sxs-lookup"><span data-stu-id="f0706-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="f0706-239">Cria um novo evento.</span><span class="sxs-lookup"><span data-stu-id="f0706-239">Creates a new event.</span></span>

### [<span data-ttu-id="f0706-240">Novo GUID</span><span class="sxs-lookup"><span data-stu-id="f0706-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="f0706-241">Cria um GUID.</span><span class="sxs-lookup"><span data-stu-id="f0706-241">Creates a GUID.</span></span>

### [<span data-ttu-id="f0706-242">New-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="f0706-243">Cria uma instância de um objeto Microsoft .NET Framework ou COM.</span><span class="sxs-lookup"><span data-stu-id="f0706-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="f0706-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="f0706-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="f0706-245">Cria um arquivo temporário.</span><span class="sxs-lookup"><span data-stu-id="f0706-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="f0706-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="f0706-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="f0706-247">Cria um objeto TimeSpan.</span><span class="sxs-lookup"><span data-stu-id="f0706-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="f0706-248">New-Variable</span><span class="sxs-lookup"><span data-stu-id="f0706-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="f0706-249">Cria uma nova variável.</span><span class="sxs-lookup"><span data-stu-id="f0706-249">Creates a new variable.</span></span>

### [<span data-ttu-id="f0706-250">Out-File</span><span class="sxs-lookup"><span data-stu-id="f0706-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="f0706-251">Envia a saída para um arquivo.</span><span class="sxs-lookup"><span data-stu-id="f0706-251">Sends output to a file.</span></span>

### [<span data-ttu-id="f0706-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="f0706-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="f0706-253">Envia a saída para uma tabela interativa em uma janela separada.</span><span class="sxs-lookup"><span data-stu-id="f0706-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="f0706-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="f0706-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="f0706-255">Envia a saída para uma impressora.</span><span class="sxs-lookup"><span data-stu-id="f0706-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="f0706-256">Out-String</span><span class="sxs-lookup"><span data-stu-id="f0706-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="f0706-257">Gera objetos de entrada como cadeias de caracteres.</span><span class="sxs-lookup"><span data-stu-id="f0706-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="f0706-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="f0706-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="f0706-259">Lê uma linha de entrada do console.</span><span class="sxs-lookup"><span data-stu-id="f0706-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="f0706-260">Register-EngineEvent</span><span class="sxs-lookup"><span data-stu-id="f0706-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="f0706-261">Assina eventos que são gerados pelo mecanismo do PowerShell e pelo `New-Event` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="f0706-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="f0706-262">Register-ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="f0706-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="f0706-263">Assina os eventos que são gerados por um objeto do Microsoft .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="f0706-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="f0706-264">Remove-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="f0706-265">Remover um alias da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="f0706-266">Remove-Event</span><span class="sxs-lookup"><span data-stu-id="f0706-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="f0706-267">Exclui eventos da fila de eventos.</span><span class="sxs-lookup"><span data-stu-id="f0706-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="f0706-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f0706-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="f0706-269">Exclui os pontos de interrupção do console atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="f0706-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="f0706-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="f0706-271">Exclui tipos estendidos da sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="f0706-272">Remove-Variable</span><span class="sxs-lookup"><span data-stu-id="f0706-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="f0706-273">Exclui uma variável e seu valor.</span><span class="sxs-lookup"><span data-stu-id="f0706-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="f0706-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="f0706-275">Seleciona objetos ou propriedades de objeto.</span><span class="sxs-lookup"><span data-stu-id="f0706-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="f0706-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="f0706-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="f0706-277">Localiza texto em arquivos e cadeias de caracteres.</span><span class="sxs-lookup"><span data-stu-id="f0706-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="f0706-278">Select-Xml</span><span class="sxs-lookup"><span data-stu-id="f0706-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="f0706-279">Localiza texto em uma cadeia de caracteres ou documento XML.</span><span class="sxs-lookup"><span data-stu-id="f0706-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="f0706-280">Send-MailMessage</span><span class="sxs-lookup"><span data-stu-id="f0706-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="f0706-281">Envia uma mensagem de email.</span><span class="sxs-lookup"><span data-stu-id="f0706-281">Sends an email message.</span></span>

### [<span data-ttu-id="f0706-282">Set-Alias</span><span class="sxs-lookup"><span data-stu-id="f0706-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="f0706-283">Cria ou altera um alias para um cmdlet ou outro comando na sessão atual do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="f0706-284">Set-Date</span><span class="sxs-lookup"><span data-stu-id="f0706-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="f0706-285">Altera a hora do sistema no computador para uma hora que você especificar.</span><span class="sxs-lookup"><span data-stu-id="f0706-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="f0706-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="f0706-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="f0706-287">Define as cores e os estilos usados para renderizar o conteúdo de redução no console.</span><span class="sxs-lookup"><span data-stu-id="f0706-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="f0706-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="f0706-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="f0706-289">Define um ponto de interrupção em uma linha, um comando ou uma variável.</span><span class="sxs-lookup"><span data-stu-id="f0706-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="f0706-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="f0706-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="f0706-291">Configura, inicia e para um rastreamento de componentes do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="f0706-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="f0706-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="f0706-293">Define o valor de uma variável.</span><span class="sxs-lookup"><span data-stu-id="f0706-293">Sets the value of a variable.</span></span> <span data-ttu-id="f0706-294">Cria a variável se uma com o nome solicitado não existir.</span><span class="sxs-lookup"><span data-stu-id="f0706-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="f0706-295">Show-Command</span><span class="sxs-lookup"><span data-stu-id="f0706-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="f0706-296">Exibe informações de comando do PowerShell em uma janela gráfica.</span><span class="sxs-lookup"><span data-stu-id="f0706-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="f0706-297">Show-Markdown</span><span class="sxs-lookup"><span data-stu-id="f0706-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="f0706-298">Mostra um arquivo ou uma cadeia de caracteres de redução no console de forma amigável usando sequências de escape VT100 ou em um navegador usando HTML.</span><span class="sxs-lookup"><span data-stu-id="f0706-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="f0706-299">Sort-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="f0706-300">Classifica os objetos por valores de propriedade.</span><span class="sxs-lookup"><span data-stu-id="f0706-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="f0706-301">Start-Sleep</span><span class="sxs-lookup"><span data-stu-id="f0706-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="f0706-302">Suspende a atividade em um script ou sessão pelo período de tempo especificado.</span><span class="sxs-lookup"><span data-stu-id="f0706-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="f0706-303">Tee-Object</span><span class="sxs-lookup"><span data-stu-id="f0706-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="f0706-304">Salva a saída do comando em um arquivo ou variável e a envia pelo pipeline.</span><span class="sxs-lookup"><span data-stu-id="f0706-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="f0706-305">Test-Json</span><span class="sxs-lookup"><span data-stu-id="f0706-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="f0706-306">Testa se uma cadeia de caracteres é um documento JSON válido</span><span class="sxs-lookup"><span data-stu-id="f0706-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="f0706-307">Trace-Command</span><span class="sxs-lookup"><span data-stu-id="f0706-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="f0706-308">Configura e inicia um rastreamento da expressão ou comando especificado.</span><span class="sxs-lookup"><span data-stu-id="f0706-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="f0706-309">Unblock-File</span><span class="sxs-lookup"><span data-stu-id="f0706-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="f0706-310">Desbloqueia os arquivos que foram baixados da Internet.</span><span class="sxs-lookup"><span data-stu-id="f0706-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="f0706-311">Unregister-Event</span><span class="sxs-lookup"><span data-stu-id="f0706-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="f0706-312">Cancela uma assinatura para um evento.</span><span class="sxs-lookup"><span data-stu-id="f0706-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="f0706-313">Update-FormatData</span><span class="sxs-lookup"><span data-stu-id="f0706-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="f0706-314">Atualiza os dados de formatação na sessão atual.</span><span class="sxs-lookup"><span data-stu-id="f0706-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="f0706-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="f0706-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="f0706-316">Adiciona e remove itens de um valor de propriedade que contém uma coleção de objetos.</span><span class="sxs-lookup"><span data-stu-id="f0706-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="f0706-317">Update-TypeData</span><span class="sxs-lookup"><span data-stu-id="f0706-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="f0706-318">Atualiza os dados de tipo estendido na sessão.</span><span class="sxs-lookup"><span data-stu-id="f0706-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="f0706-319">Wait-Debugger</span><span class="sxs-lookup"><span data-stu-id="f0706-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="f0706-320">Interrompe um script no depurador antes de executar a próxima instrução no script.</span><span class="sxs-lookup"><span data-stu-id="f0706-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="f0706-321">Wait-Event</span><span class="sxs-lookup"><span data-stu-id="f0706-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="f0706-322">Aguarda até que um determinado evento seja gerado antes de continuar a executar.</span><span class="sxs-lookup"><span data-stu-id="f0706-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="f0706-323">Write-Debug</span><span class="sxs-lookup"><span data-stu-id="f0706-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="f0706-324">Grava uma mensagem de depuração para o console.</span><span class="sxs-lookup"><span data-stu-id="f0706-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="f0706-325">Erro de gravação</span><span class="sxs-lookup"><span data-stu-id="f0706-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="f0706-326">Grava um objeto no fluxo de erros.</span><span class="sxs-lookup"><span data-stu-id="f0706-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="f0706-327">Write-Host</span><span class="sxs-lookup"><span data-stu-id="f0706-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="f0706-328">Grava a saída personalizada em um host.</span><span class="sxs-lookup"><span data-stu-id="f0706-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="f0706-329">Write-Information</span><span class="sxs-lookup"><span data-stu-id="f0706-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="f0706-330">Especifica como o PowerShell lida com dados de fluxo de informações para um comando.</span><span class="sxs-lookup"><span data-stu-id="f0706-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="f0706-331">Write-Output</span><span class="sxs-lookup"><span data-stu-id="f0706-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="f0706-332">Envia os objetos especificados para o próximo comando no pipeline.</span><span class="sxs-lookup"><span data-stu-id="f0706-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="f0706-333">Se o comando for o último no pipeline, os objetos serão exibidos no console.</span><span class="sxs-lookup"><span data-stu-id="f0706-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="f0706-334">Write-Progress</span><span class="sxs-lookup"><span data-stu-id="f0706-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="f0706-335">Exibe uma barra de progresso dentro de uma janela de comando do PowerShell.</span><span class="sxs-lookup"><span data-stu-id="f0706-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="f0706-336">Write-Verbose</span><span class="sxs-lookup"><span data-stu-id="f0706-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="f0706-337">Grava o texto para o fluxo de mensagem detalhada.</span><span class="sxs-lookup"><span data-stu-id="f0706-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="f0706-338">Write-Warning</span><span class="sxs-lookup"><span data-stu-id="f0706-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="f0706-339">Grava uma mensagem de aviso.</span><span class="sxs-lookup"><span data-stu-id="f0706-339">Writes a warning message.</span></span>
